# conway-life-wasm

./: .dockerignore  Cargo.toml  DEV.md  Dockerfile  LICENSE_MIT  README.md  docker-compose.dev.yml  docker-compose.yml
apps/server/: Cargo.toml
apps/server/src/: main.rs
src/: lib.rs
wasm-tests/: Cargo.toml
wasm-tests/src/: lib.rs
wasm-tests/tests/: web.rs
