# [package]
# name = "wasm-game-of-life"
# version = "0.1.0"
# authors = ["pegasust <pegasucksgg@gmail.com>"]
# edition = "2018"
#
[workspace]
members = [
    "packages/*",
    "apps/*",
    "wasm-tests"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [package.metadata.scripts]
# hello = "echo hello"
# test = "cargo test"
# pack-test = "wasm-pack test --firefox packages/web-app"
# # helper that puts web-app to our dist folder: pkg
# publish-server = "mkdir -p pkg && cp -r packages/web-app/pkg/* pkg/ && cp -r public/* pkg/"
# build = "wasm-pack build --target web --out-name web-app --release packages/web-app && cargo run-script publish-server"
# build-dev = "wasm-pack build --target web --out-name web-app --dev packages/web-app && cargo run-script publish-server"
# dev = "cargo watch -x 'run-script build-dev'"
# # serves the content of pkg/web-app as a server
# serve = "cargo run -p server"
# serve-watch = "cargo watch -w apps/server -x 'run -p server'"
